fix footer too high on profile page

--- a/src/ProfilePage/Profile.module.css
+++ b/src/ProfilePage/Profile.module.css
@@ -1,5 +1,5 @@
 .container {
-    margin: 0 2rem;
+    margin: 0 2rem 10rem 2rem;
 }
 
 .fieldTable {
